# foca-ai

./: .gitignore
api/: Dockerfile  debug_db.py  docker-compose.yml  main.py  pyproject.toml
api/app/infrastructure/: embeddings.py  llm.py  session.py
api/docs/: question.csv
api/docs/study_notes/: adi_lei_pre_constitucional_e_adpf.md  assembleia_credores_recuperacao_judicial_voto.md  cadeia_de_custodia_e_nexo_causal.md  competencia_justica_trabalho_contribuicao_sindical.md  dissidio_coletivo_extinto_sem_resolucao_merito.md  extincao_contrato_administrativo_por_suspensao.md  inexigibilidade_conduta_diversa_no_furto.md  iss_retencao_tomador_cebas.md  lgpd_compartilhamento_dados_sensiveis_sem_consentimento.md  reconvencao_contra_terceiro_no_cpc.md
api/migrations/: env.py
api/migrations/versions/: 072d78397f6c_add_sm2_review_progress_to_study_note.py  34aed8106246_.py  35a545d9780e_add_study_question_table.py  3b4c662025b9_add_server_default_to_priority_score.py  4b5184db3a63_add_priority_score_to_question_table.py  561f86ef3dc3_create_study_table.py  6ff5dee3e1b5_study_notes_model_and_relationship_with_.py  7d2c9c453563_.py  8c45938d538b_user_models_add_a_recovery_code_and_add_.py  8c7e7bece330_add_a_score_for_question.py  906848201681_add_space_in_question_statement.py  a085b9e13688_change_priority_score_default_to_0_2.py  a1b2c3d4e5f6_add_exam_question_and_view.py  a2b3c4d5e6f7_add_alternatives_to_v_question_detail.py  a4b065da0e7e_add_law_area_to_study_note.py  a9cd382310e8_ajustes_na_estrutura_do_banco.py  b42494b3ff19_increase_statement_length_to_2000.py  (+7 more)
api/tests/: conftest.py
(+333 files in other folders)
